[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.19.1", features = ["tensorflow_gpu"] }
gilrs = "0.10.1"
screenshots = "0.4.6"
quad-gamepad = "0.2.0-alpha"